@@ -1,3 +1,8 @@
+2021-03-15  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/kernel/JupyterRestClient.java:
+	Initial writing.
+
 2021-03-14  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/server/renderer/SparkSessionRenderer.java:
